// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildSite basic: bond 1`] = `
"- [lbl](refactor.one)

"
`;

exports[`buildSite ids are converted: converted 1`] = `
"Build site home

- [build-site.one](notes/id.build-site.one)

"
`;

exports[`buildSite image prefix: sample.image-link.md 1`] = `
"![link-alt](fake-s3.com/link-path.jpg)

"
`;

exports[`buildSite multiple roots: build-site.md 1`] = `
"Build site home

- [build-site.one](id.build-site.one)

"
`;

exports[`buildSite multiple roots: foo.md 1`] = `
"- [lbl](notes/refactor.one)

"
`;

exports[`buildSite v2 write stubs no write stub 1`] = `
Array [
  "bar.one.md",
  "foo.md",
  "root.md",
  "root.schema.yml",
]
`;

exports[`buildSite v2 write stubs write stub 1`] = `
Array [
  "bar.md",
  "bar.one.md",
  "foo.md",
  "root.md",
  "root.schema.yml",
]
`;

exports[`custom frontmatter basic 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
parent: null
children:
  - foo.ch1
nav_order: 0
fname: foo
bond: 42
hpath: foo
permalink: /
---
foo body

"
`;

exports[`custom frontmatter generate toc 1`] = `
"---
id: bar
title: Bar
desc: ''
updated: '1'
created: '1'
parent: null
children: []
nav_order: 0
fname: bar
toc: true
hpath: bar
permalink: /
---
# Header1

## Table of Contents

- [Header 1.1](#header-11)
- [Header 2](#header-2)

## Header 1.1

## Header 2

"
`;

exports[`note refs note refs 1`] = `
"# Foo Content

# Bar Content 

<div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\" >
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">bar</span></div>
<a href=\\"notes/id.bar.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>        
  
# I am bar

 [foo](notes/id.foo)



</div>    
</div>

"
`;

exports[`note refs note refs, disable pretty 1`] = `
"# Foo Content

# Bar Content # I am bar

 [foo](notes/id.foo)


"
`;

exports[`note refs note refs, recursive 1`] = `
"# Foo Content

# Bar Content 

<div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\" >
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">bar</span></div>
<a href=\\"notes/id.bar.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>        
  
# Bar

<div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\" >
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">bar.one</span></div>
<a href=\\"/404.html.html\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>        
  
# Bar.One

</div>    
</div>



</div>    
</div>

"
`;

exports[`toc generate toc 1`] = `
"---
id: bar
title: Bar
desc: ''
updated: '1'
created: '1'
parent: null
children: []
toc: true
nav_order: 0
fname: bar
hpath: bar
permalink: /
---
# Header1

## Table of Contents

- [Header 1.1](#header-11)
- [Header 2](#header-2)

## Header 1.1

## Header 2

"
`;

exports[`toc no generate toc 1`] = `
"---
id: bar
title: Bar
desc: ''
updated: '1'
created: '1'
parent: null
children: []
nav_order: 0
fname: bar
hpath: bar
permalink: /
---
# Header1

## Table of Contents

## Header 1.1

## Header 2

"
`;

exports[`wiki link case sensitive link 1`] = `
"[foo.Mixed_case](id.foo.mixed-case)

"
`;

exports[`wiki link missing link 1`] = `
"# Foo Content

# Bar Content [missing-link](/404.html)

"
`;

exports[`wiki link missing link 2`] = `
Array [
  Object {
    "links": Array [
      "missing-link",
    ],
    "source": "foo",
  },
]
`;
